Pound -- history of user-visible changes. 2026-02-22
See the end of file for copying conditions.

Pound is a continuation of the software originally developed by
Robert Segall at Apsis GmbH, which was officially discontinued
on 2022-09-19.  See the README file for details.

Please send pound bug reports to <gray@gnu.org>

Version 4.90.90 (git)

* Changes in Lua API

** http.resendcount

Keeps number of resending attempts underwent by the current request.

** http.service.name

Name of the currently selected service.  Assigning to this variable
instructs pound to send the current request to the named service.
Assigning a nil also implies to rerun service selection from the
beginning.

** http.service.locus

Location of the currently selected service in the configuration file.

Version 4.20, 2026-02-06

* New selection statement: Method

This conditional statement evaluates to true, if the request method
matches the supplied pattern, e.g.:

  Service
      Method "POST"
      ...
  End

* New internal backend: Success

Always returns a 200 response code.  This is intended mainly for
handling special requests.  For example, the service definition
below replies to the OPTIONS requests:

   Service
      Method "OPTIONS"
      Rewrite response
         SetHeader "Access-Control-Allow-Origin: example.com"
         SetHeader "Access-Control-Allow-Methods: GET,POST,PUT"
         SetHeader "Access-Control-Max-Age: 1800"
      End
      Success
   End

* Changes in Lua API

** http.req.body

This field contains the captured content of the incoming request.  For
it to be available, content capturing must be explicitly enabled for
the service on whose behalf the Lua code is called.  Content capturing
is enabled by the following new configuration statement:

   ContentCapture SIZE

where SIZE sets the upper limit on the captured content size.  If the
actual content length is greater than this value, saved material is
discarded and http.req.body is set to nil.

** http.resend
