@@ -1,0 +1,53 @@
+# This file is part of pound testsuite. -*- autotest -*-
+# Copyright (C) 2026 Sergey Poznyakoff
+#
+# Pound is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# Pound is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with pound.  If not, see <http://www.gnu.org/licenses/>.
+AT_SETUP([Resend to another backend])
+AT_KEYWORDS([cond lua lua-resend lua-resend-be])
+
+AT_SKIP_IF([test "$LUA_AVAILABLE" != 1])
+AT_DATA([resend.lua],
+[[function resend()
+   if http.resp.code == 421 then
+      http.req.headers['x-pound-force-status'] = nil
+      http.balancer = 65535
+   end
+end
+]])
+
+PT_CHECK([Lua
+	Load "resend.lua"
+End
+ListenHTTP
+	Service
+		Rewrite response
+			LuaModify "resend"
+		End
+		Backend
+		End
+		Emergency
+		End
+	End
+End		
+],
+[GET /echo/file
+x-pound-force-status: 421
+end
+
+200
+x-backend-number: 1
+end
+])
+
+AT_CLEANUP
